// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingMessage > increments elapsed time and rotates loading messages over time 1`] = `
<div
  class="flex min-h-[60vh] flex-col items-center justify-center p-4"
>
  <div
    class="rounded-xl border bg-card text-card-foreground w-full max-w-md shadow-lg"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 pb-2 text-center"
    >
      <div
        class="mb-4 flex justify-center"
      >
        <svg
          class="lucide lucide-loader-circle text-primary h-12 w-12 animate-spin"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
      <div
        class="font-semibold tracking-tight text-xl"
      >
        Generating Report
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-6 text-center"
    >
      <div
        class="flex flex-col items-center justify-center space-y-2"
      >
        <div
          class="text-primary flex items-center font-mono text-3xl font-bold"
        >
          <svg
            class="lucide lucide-clock text-muted-foreground mr-3 h-6 w-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          0:02
        </div>
        <p
          class="text-muted-foreground text-sm"
        >
          Elapsed Time
        </p>
      </div>
      <div
        class="flex h-12 items-center justify-center"
      >
        <p
          class="text-foreground/80 animate-pulse text-lg font-medium transition-all duration-500"
        >
          Initializing performance tests...
        </p>
      </div>
      <p
        class="text-muted-foreground mt-4 text-xs"
      >
        This process may take up to 2 minutes. Please don't close this window.
      </p>
    </div>
  </div>
</div>
`;

exports[`LoadingMessage > increments elapsed time and rotates loading messages over time 2`] = `
<div
  class="flex min-h-[60vh] flex-col items-center justify-center p-4"
>
  <div
    class="rounded-xl border bg-card text-card-foreground w-full max-w-md shadow-lg"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 pb-2 text-center"
    >
      <div
        class="mb-4 flex justify-center"
      >
        <svg
          class="lucide lucide-loader-circle text-primary h-12 w-12 animate-spin"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
      <div
        class="font-semibold tracking-tight text-xl"
      >
        Generating Report
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-6 text-center"
    >
      <div
        class="flex flex-col items-center justify-center space-y-2"
      >
        <div
          class="text-primary flex items-center font-mono text-3xl font-bold"
        >
          <svg
            class="lucide lucide-clock text-muted-foreground mr-3 h-6 w-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          0:04
        </div>
        <p
          class="text-muted-foreground text-sm"
        >
          Elapsed Time
        </p>
      </div>
      <div
        class="flex h-12 items-center justify-center"
      >
        <p
          class="text-foreground/80 animate-pulse text-lg font-medium transition-all duration-500"
        >
          Analyzing Core Web Vitals...
        </p>
      </div>
      <p
        class="text-muted-foreground mt-4 text-xs"
      >
        This process may take up to 2 minutes. Please don't close this window.
      </p>
    </div>
  </div>
</div>
`;

exports[`LoadingMessage > increments elapsed time and rotates loading messages over time 3`] = `
<div
  class="flex min-h-[60vh] flex-col items-center justify-center p-4"
>
  <div
    class="rounded-xl border bg-card text-card-foreground w-full max-w-md shadow-lg"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 pb-2 text-center"
    >
      <div
        class="mb-4 flex justify-center"
      >
        <svg
          class="lucide lucide-loader-circle text-primary h-12 w-12 animate-spin"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
      <div
        class="font-semibold tracking-tight text-xl"
      >
        Generating Report
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-6 text-center"
    >
      <div
        class="flex flex-col items-center justify-center space-y-2"
      >
        <div
          class="text-primary flex items-center font-mono text-3xl font-bold"
        >
          <svg
            class="lucide lucide-clock text-muted-foreground mr-3 h-6 w-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          0:08
        </div>
        <p
          class="text-muted-foreground text-sm"
        >
          Elapsed Time
        </p>
      </div>
      <div
        class="flex h-12 items-center justify-center"
      >
        <p
          class="text-foreground/80 animate-pulse text-lg font-medium transition-all duration-500"
        >
          Checking mobile responsiveness...
        </p>
      </div>
      <p
        class="text-muted-foreground mt-4 text-xs"
      >
        This process may take up to 2 minutes. Please don't close this window.
      </p>
    </div>
  </div>
</div>
`;

exports[`LoadingMessage > stays hidden for the first two seconds and then appears 1`] = `null`;

exports[`LoadingMessage > stays hidden for the first two seconds and then appears 2`] = `null`;

exports[`LoadingMessage > stays hidden for the first two seconds and then appears 3`] = `
<div
  class="flex min-h-[60vh] flex-col items-center justify-center p-4"
>
  <div
    class="rounded-xl border bg-card text-card-foreground w-full max-w-md shadow-lg"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 pb-2 text-center"
    >
      <div
        class="mb-4 flex justify-center"
      >
        <svg
          class="lucide lucide-loader-circle text-primary h-12 w-12 animate-spin"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
      <div
        class="font-semibold tracking-tight text-xl"
      >
        Generating Report
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-6 text-center"
    >
      <div
        class="flex flex-col items-center justify-center space-y-2"
      >
        <div
          class="text-primary flex items-center font-mono text-3xl font-bold"
        >
          <svg
            class="lucide lucide-clock text-muted-foreground mr-3 h-6 w-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          0:02
        </div>
        <p
          class="text-muted-foreground text-sm"
        >
          Elapsed Time
        </p>
      </div>
      <div
        class="flex h-12 items-center justify-center"
      >
        <p
          class="text-foreground/80 animate-pulse text-lg font-medium transition-all duration-500"
        >
          Initializing performance tests...
        </p>
      </div>
      <p
        class="text-muted-foreground mt-4 text-xs"
      >
        This process may take up to 2 minutes. Please don't close this window.
      </p>
    </div>
  </div>
</div>
`;
